fix(cate.css): fix card wrap width
fix card wrap width

--- a/css/cate.less
+++ b/css/cate.less
@@ -58,7 +58,6 @@ main {
         }
 
         .card-wrap {
-            width: 100%;
             display: flex;
             align-items: center;
             overflow-y: auto;
